<resources>
    <string name="app_name">Remember</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="create_account">To create a new account</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Register</string>
    <string name="Set_Password">Set Password</string>
    <string name="secure_account">To secure your account</string>
    <string name="Password">Pasword</string>
    <string name="confirm_password">Confirm Pasword</string>
    <string name="back">Back</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="receive_otp">To receieve OTP to get verified</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_mobile">To verify your mobile number</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="congrats">Congratulations</string>
    <string name="verified">Your mobile number has been verfied</string>
    <string name="get_started">Get Started</string>

    <string name="login">User Login</string>
    <string name="login_account">To access your account</string>
    <string name="mobile">Mobile number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_members">Members</string>
    <string name="menu_store">Store</string>
    <string name="menu_settings">Settings</string>

    <string name="empty_comment">Be the first one to share memories</string>
    <string name="add_comment">Express your feelings</string>
    <string name="add_comment_label">Express your memories with </string>
    <string name="add_comment_hint">Type here to express your memories… </string>
    <string name="add_comment_button">Publish</string>

    <string name="no_events">No events to show..</string>
    <string name="no_members">No members to show..</string>
    <string name="create_member">Create Members</string>
    <string name="create_post_select_profile">Remembering</string>
    <string name="create_post_select_date">Remembering On</string>
    <string name="create_post_event_title">Remembrance</string>
    <string name="create_post_event_desc">My memories</string>
    <string name="create_button">Create Memories</string>

    <string name="tab1">Create</string>
    <string name="tab2">Add</string>
    <string name="upload_image">Upload image</string>
    <string name="member_name">Name</string>
    <string name="member_type">Member type</string>
    <string name="member_relation">Relation</string>
    <string name="member_relation_sub">Related as</string>
    <string name="member_born">Born</string>
    <string name="member_died">Died</string>
    <string name="member_birthplace">Birth Place :</string>
    <string name="member_deathplace">Death Place :</string>
    <string name="member_restingplace">Resting Place :</string>
    <string name="member_bio">Biography :</string>
    <string name="member_create">Create Profile</string>
    <string name="search_hint">Search members</string>
    <string name="no_member">No members found..</string>

    <string name="product_price">\u0024 %1$d</string>
    <string name="product_price_desc">saved \u0024%1$d</string>
    <string name="product_price_per">(%1$d%% OFF)</string>
    <string name="delivery_on">Get it by %1$s </string>
    <string name="delivery_by">Delivery : %1$s </string>
    <string name="product_left">only %1$d product left</string>
    <string name="product_out_of_stock">Product out of stock</string>
    <string name="buy">Buy Now</string>
    <string name="order">No order placed yet</string>
    <string name="place">Place order</string>
    <string name="member">Select member</string>
    <string name="profile_dob">Date of birth :</string>
    <string name="profile_gender">Gender :</string>
    <string name="profile_mobile">Mobile no :</string>
    <string name="profile_email">Email Id :</string>
    <string name="profile_address_fullname">Fullname :</string>
    <string name="profile_address_street_address">Street address :</string>
    <string name="profile_address_city">City :</string>
    <string name="profile_address_state">State :</string>
    <string name="profile_address_Country">Country :</string>
    <string name="Country">United States of America</string>
    <string name="profile_address_zipcode">Zipcode :</string>
    <string name="profile_update">Update profile</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="show_qr">Show QR Code</string>
    <string name="confirm">Confirm</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
</resources>