<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.register.GetStartedFragment">




        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textSize="42dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/custom_fonts"
            android:textFontWeight="500"
            android:text="@string/successfully_registered" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/success"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="18dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/custom_fonts"
        android:textFontWeight="500"
        android:text="@string/congrats" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="14dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/custom_fonts"
        android:textFontWeight="500"
        android:text="@string/verified" />


</LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_getstarted"
        android:layout_width="150dp"
        android:textSize="18dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:drawablePadding="0dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/custom_fonts"
        android:padding="0dp"

        android:text="@string/get_started" />

</FrameLayout>