<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="16dp"
    tools:context=".ui.register.PasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="42dp"
        android:textColor="@color/black"
        android:fontFamily="@font/custom_fonts"
        android:textFontWeight="500"
        android:text="@string/Set_Password" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:textSize="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/custom_fonts"

        android:text="@string/secure_account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/custom_fonts"
            android:text="@string/Password" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/custom_fonts"
            android:text="@string/confirm_password" />
        <EditText
            android:id="@+id/etConfirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"

            android:inputType="textPassword" />
    </LinearLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center|right"
        android:layout_marginTop="70dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/next"
        android:enabled="false"
        android:fontFamily="@font/custom_fonts"
        android:padding="6dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:drawablePadding="0dp"
        android:background="@drawable/transparent_bg_bordered"
        android:fontFamily="@font/custom_fonts"
        android:padding="0dp"
        android:textAllCaps="false"
        android:text="@string/back" />

</FrameLayout>