<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>

                <TextView
                    android:id="@+id/tv_name_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_relation">

                </TextView>

                <TextView
                    android:id="@+id/tv_relation_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_relation_sub">

                </TextView>

                <TextView
                    android:id="@+id/tv_relation_as_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_born">

                </TextView>

                <TextView
                    android:id="@+id/tv_born_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_died">

                </TextView>

                <TextView
                    android:id="@+id/tv_died_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_birthplace">

                </TextView>

                <TextView
                    android:id="@+id/tv_birthplace_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_deathplace">

                </TextView>

                <TextView
                    android:id="@+id/tv_deathplace_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_restingplace">

                </TextView>

                <TextView
                    android:id="@+id/tv_restingplace_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_bio">

                </TextView>

                <TextView
                    android:id="@+id/tv_bio_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_type">

                </TextView>

                <TextView
                    android:id="@+id/tv_type_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display"
                    android:text="@string/member_name">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_confirm"

                    android:layout_width="150dp"
                    android:layout_height="30dp"

                    android:background="@drawable/button_bg"
                    android:drawablePadding="0dp"
                    android:fontFamily="@font/custom_fonts"
                    android:padding="0dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"

                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etComment" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>