<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_comment_label"
        android:fontFamily="@font/sf_pro_display"
        android:textFontWeight="400"
android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUser_nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="Issac Newton"
        android:textColor="@color/black"

        android:textFontWeight="400"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="250dp"
        android:fontFamily="@font/sf_pro_display"
        android:background="@drawable/transparent_bg_bordered"
        android:ems="10"
        android:maxLength="250"
        android:gravity="start"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/add_comment_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/250"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/etComment"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_publishComment"

        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/button_bg"
android:layout_marginTop="10dp"
        android:drawablePadding="0dp"
        android:fontFamily="@font/custom_fonts"
        android:padding="0dp"
        android:text="@string/add_comment_button"
        android:textColor="@color/white"

        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etComment" />
</androidx.constraintlayout.widget.ConstraintLayout>